# CHANGES TO MTurkR 0.6 #

## SIGNIFICANT USER-VISIBLE CHANGES ##

* The graphical wizard now allows retrieval of assignments by requester annotation (or batch) field.
* The graphical and text-based wizards now allow you to preview the email that will be sent to workers using the `ContactWorkers` function. (#53)
* The graphical and text-based wizards now allow users to assign qualifications to workers. (#61)
* The graphical user interface (`mturkr.wizard`) has a significantly cleaned up code base aimed at simplifying future bug fixes. A user-visible side effect of this is modified aesthetics that should make the interface more attractive and more uniform. (#56)
* `mturkr.wizard` now allows users to enter multiple WorkerIds for several functions by simply pasting one WorkerId per line into a multi-line textbox. (#52, h/t Justin Weigand)
* `GetReviewResultsForHIT` now has `pagenumber` and `pagesize` arguments to control pagination of results. (#54)

## DOCUMENTATION ##

* Documentation of generating a Masters QualificationRequirement has been slightly clarified.
* Examples of Amazon Simple Queue Service (SQS) notifications have been added, along with a detailed tutorial on the MTurk wiki. (#60)

## BUG FIXES ##

* Fixed a possible bug in `ContactWorkers` batch mode that sent multiple emails to the same worker(s). (#58, h/t Andy Guess)
* Fixed a few XML-related bugs in `as.data.frame.QuestionForm` and `as.data.frame.AnswerKey`.


# CHANGES TO MTurkR 0.5.5 #

## SIGNIFICANT USER-VISIBLE CHANGES ##

* `GenerateReviewPolicy` is removed in lieu of two new functions: `GenerateHITReviewPolicy` and `GenerateAssignmentReviewPolicy`, both of which have a simplified function API and include extensive examples in the documentaiton. The previous code never worked correctly, so this change should be unimportant. The use of `CreateHIT` remains unchanged. (#47)